# hamlet

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  test.py
.claude-plugin/: mcp.json  plugin.json
.ideate/: autopilot-state.yaml  metrics.jsonl
hooks/: hamlet_hook_utils.py  hooks.json  notification.py  post_compact.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  stop_failure.py  subagent_start.py  subagent_stop.py  task_completed.py  teammate_idle.py  user_prompt_submit.py
mcp/: server.py  start.sh
plan/: architecture.md
scripts/: generate_sprites.py
specs/: brrr-state.md  journal.md  metrics.jsonl  migration-log.md
tests/: conftest.py  test_agent_updater.py  test_animation.py  test_app_factory.py  test_cli.py  test_cli_daemon.py  test_cli_init.py  test_cli_install.py  test_cli_service.py  test_cli_settings.py  test_cursor.py  test_cursor_overlay.py  test_doctor.py  test_e2e_headless.py  test_e2e_hook_to_render.py  test_e2e_persistence_roundtrip.py  test_event_processor.py  test_event_router.py  test_expansion.py  test_hooks.py  test_inference_engine.py  test_kitty_app.py  test_kitty_integration.py  test_kitty_protocol.py  test_kitty_renderer.py  test_kitty_sprites.py  test_kitty_zoom.py  test_map_viewer.py  test_mcp_handlers.py  test_mcp_serializers.py  test_mcp_server.py  test_mcp_validation.py  test_persistence_connection.py  test_persistence_event_log.py  test_persistence_facade.py  test_persistence_loader.py  test_persistence_migrations.py  (+31 more)
(+1918 files in other folders)
