[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hamlet"
version = "0.1.0"
description = "Terminal-based idle game for Claude Code agent activity visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "textual>=0.50.0",
    "aiosqlite>=0.19.0",
    "jsonschema>=4.0.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hamlet = "hamlet.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]